# nohands

./: .gitignore  AUTHORS  ChangeLog  Doxyfile  INSTALL  Makefile.am  NEWS  README  autogen.sh  configure.ac  configure.in  doxymain.h
data/: Doxyfile.dbus  Makefile.am  doxymain.h  hfconsole.glade  hfconsole.in  hfpd-dbus-doc.cs  hfpd.service.in
hfpd/: Makefile.am  configfile.cpp  configfile.h  dbus-marshall.h  dbus.cpp  dbus.h  hfpd.cpp  hfpdtext.cpp  net.cpp  net.h  objects.cpp  objects.h  proto.h  util.cpp  util.h
include/: Makefile.am
include/libhfp/: Makefile.am  bt.h  events-indep.h  events.h  hfp.h  list.h  rfcomm.h  soundio-buf.h  soundio.h
libhfp/: Makefile.am  bt.cpp  events-indep.cpp  events.cpp  hfp.cpp  oplatency.h  rfcomm.cpp  soundio-alsa.cpp  soundio-manager.cpp  soundio-oss.cpp  soundio-pump.cpp  soundio-util.cpp
m4/: qt.m4
nhandsfree/: Makefile.am  nhandsfree.cpp  nhandsfree.h
qt/: Makefile.am  dialpad.ui  events-qt.h  hfstandalone.cpp  nohands.ui  nohands.ui.h  nohandswidget.h  prefs.ui  prefs.ui.h  prefswidget.h  scandialog.ui  scandialog.ui.h  scandialogwidget.h  standalone.cpp
test/: Makefile.am  pumpunit.cpp  soundtest.cpp  timertest.cpp
